--- a/src/www/json/filter-configs.json
+++ b/src/www/json/filter-configs.json
@@ -1,78 +1,216 @@
 {
-	"class" : [
-      {
-        "label" : "Bard",
-        "filterArgs" : ["Bard", "yes"]
-      },
-      {
-        "label" : "Cleric",
-        "filterArgs" : ["Cleric", "yes"]
-      },
-      {
-        "label" : "Druid",
-        "filterArgs" : ["Druid", "yes"]
-      },
-      {
-        "label" : "Paladin",
-        "filterArgs" : ["Paladin", "yes"]
-      },
-      {
-        "label" : "Ranger",
-        "filterArgs" : ["Ranger", "yes"]
-      },
-      {
-        "label" : "Sorcerer",
-        "filterArgs" : ["Sorcerer", "yes"]
-      },
-      {
-        "label" : "Warlock",
-        "filterArgs" : ["Warlock", "yes"]
-      },
-      {
-        "label" : "Wizard",
-        "filterArgs" : ["Wizard", "yes"]
-      }
-    ],
-    "level" : [
-      {
-        "label" : "Cantrip",
-        "filterArgs" : ["level", "cantrip"]
-      },
-      {
-        "label" : "1st",
-        "filterArgs" : ["level", "1st"]
-      },
-      {
-        "label" : "2nd",
-        "filterArgs" : ["level", "2nd"]
-      },
-      {
-        "label" : "3rd",
-        "filterArgs" : ["level", "3rd"]
-      },
-      {
-        "label" : "4th",
-        "filterArgs" : ["level", "4th"]
-      },
-      {
-        "label" : "5th",
-        "filterArgs" : ["level", "5th"]
-      },
-      {
-        "label" : "6th",
-        "filterArgs" : ["level", "6th"]
-      },
-      {
-        "label" : "7th",
-        "filterArgs" : ["level", "7th"]
-      },
-      {
-        "label" : "8th",
-        "filterArgs" : ["level", "8th"]
-      },
-      {
-        "label" : "9th",
-        "filterArgs" : ["level", "9th"]
-      }
-    ]
+  "class": [
+    {
+      "label": "Bard",
+      "filterArgs": ["Bard", "yes"]
+    },
+    {
+      "label": "Cleric",
+      "filterArgs": ["Cleric", "yes"]
+    },
+    {
+      "label": "Druid",
+      "filterArgs": ["Druid", "yes"]
+    },
+    {
+      "label": "Paladin",
+      "filterArgs": ["Paladin", "yes"]
+    },
+    {
+      "label": "Ranger",
+      "filterArgs": ["Ranger", "yes"]
+    },
+    {
+      "label": "Sorcerer",
+      "filterArgs": ["Sorcerer", "yes"]
+    },
+    {
+      "label": "Warlock",
+      "filterArgs": ["Warlock", "yes"]
+    },
+    {
+      "label": "Wizard",
+      "filterArgs": ["Wizard", "yes"]
+    }
+  ],
+  "level": [
+    {
+      "label": "Cantrip",
+      "filterArgs": ["level", "cantrip"]
+    },
+    {
+      "label": "1st",
+      "filterArgs": ["level", "1st"]
+    },
+    {
+      "label": "2nd",
+      "filterArgs": ["level", "2nd"]
+    },
+    {
+      "label": "3rd",
+      "filterArgs": ["level", "3rd"]
+    },
+    {
+      "label": "4th",
+      "filterArgs": ["level", "4th"]
+    },
+    {
+      "label": "5th",
+      "filterArgs": ["level", "5th"]
+    },
+    {
+      "label": "6th",
+      "filterArgs": ["level", "6th"]
+    },
+    {
+      "label": "7th",
+      "filterArgs": ["level", "7th"]
+    },
+    {
+      "label": "8th",
+      "filterArgs": ["level", "8th"]
+    },
+    {
+      "label": "9th",
+      "filterArgs": ["level", "9th"]
+    }
+  ],
+  "source": [
+    {
+      "label": "Player's Handbook",
+      "filterArgs": ["page", "phb"]
+    },
+    {
+      "label": "Elemental Evil",
+      "filterArgs": ["page", "ee"]
+    },
+    {
+      "label": "Sword Coast Adventurers' Guide",
+      "filterArgs": ["page", "scag"]
+    }
+  ],
+  "casting_time": [
+    {
+      "label": "1 action",
+      "filterArgs": ["casting_time", "1 action"]
+    },
+    {
+      "label": "1 reaction",
+      "filterArgs": ["casting_time", "1 reaction"]
+    },
+    {
+      "label": "1 bonus action",
+      "filterArgs": ["casting_time", "1 bonus action"]
+    },
+    {
+      "label": "1 minute",
+      "filterArgs": ["casting_time", "1 minute"]
+    },
+    {
+      "label": "10 minutes",
+      "filterArgs": ["casting_time", "10 minutes"]
+    },
+    {
+      "label": "1 hour",
+      "filterArgs": ["casting_time", "1 hour"]
+    },
+    {
+      "label": "24 hours",
+      "filterArgs": ["casting_time", "24 hours"]
+    }
+  ],
+  "range": [
+    {
+      "label": "Self",
+      "filterArgs": ["range", "self"]
+    },
+    {
+      "label": "Touch",
+      "filterArgs": ["range", "Touch"]
+    },
+    {
+      "label": "5 feet",
+      "filterArgs": ["range", "5 feet"]
+    },
+    {
+      "label": "10 feet",
+      "filterArgs": ["range", "10 feet"]
+    },
+    {
+      "label": "15 feet",
+      "filterArgs": ["range", "15 feet"]
+    },
+    {
+      "label": "30 feet",
+      "filterArgs": ["range", "30 feet"]
+    },
+    {
+      "label": "60 feet",
+      "filterArgs": ["range", "60 feet"]
+    },
+    {
+      "label": "90 feet",
+      "filterArgs": ["range", "90 feet"]
+    },
+    {
+      "label": "120 feet",
+      "filterArgs": ["range", "120 feet"]
+    },
+    {
+      "label": "100 feet",
+      "filterArgs": ["range", "100 feet"]
+    },
+    {
+      "label": "150 feet",
+      "filterArgs": ["range", "150 feet"]
+    },
+    {
+      "label": "300 feet",
+      "filterArgs": ["range", "300 feet"]
+    },
+    {
+      "label": "500 feet",
+      "filterArgs": ["range", "500 feet"]
+    },
+    {
+      "label": "500 miles",
+      "filterArgs": ["range", "500 miles"]
+    }
+  ],
+  "components": [
+    {
+      "label": "V",
+      "filterArgs": ["components", "V"]
+    },
+    {
+      "label": "S",
+      "filterArgs": ["components", "S"]
+    },
+    {
+      "label": "M",
+      "filterArgs": ["components", "M"]
+    },
+    {
+      "label": "GP",
+      "filterArgs": ["components", "GP"]
+    }
+],
+  "duration": [
+    {
+      "label": "",
+      "filterArgs": []
+    }
+  ],
+  "options": [
+    {
+      "label": "",
+      "filterArgs": []
+    }
+  ],
+  "school": [
+    {
+      "label": "",
+      "filterArgs": []
+    }
+  ]
 }
