--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 src/www/json/spells.json
 dist
-node_modules
+node_modules/*
+!node_modules/simple-react-forms
+node_modules/simple-react-forms/node_modules
